src/test/resources/typeSystemTestModels/valid/interfaces/InterfaceNoStaticMethod.java
package typeSystemTestModels.valid.interfaces;

public interface InterfaceNoStaticMethod {
  public String getString(); //not static
}