src/test/resources/typeSystemTestModels/invalid/interfaces/InterfaceNoFinalMethod.java
package typeSystemTestModels.invalid;

public interface InterfaceNoFinalMethod {

  final String getString();

}
